--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,10 @@ header {
 	margin-top: 30px;
 }
 
+#content{
+	background-color: #fff;
+}
+
 #profile{
 	margin-top: 50px;
     background: #2ec1db;
@@ -43,7 +47,7 @@ header {
 }
 
 .about .profile-pic img{
-	margin-left: -51px;
+	margin-left: -19px;
     margin-top: -14px;
     height: 127px;
     border-radius: 13px;
@@ -117,7 +121,7 @@ span.social-text {
     padding: 2px 9px;
     font-size: 22px;
     cursor: pointer;
-    top: 10px;
+    top: 25px;
     border-radius: 66px;
     /* height: 30px; */
 }
