--- a/css/style-main.css
+++ b/css/style-main.css
@@ -1,41 +1,22 @@
 header {
     position: relative;
     overflow: visible;
+    height: 76px;
+    margin-bottom: 20px;
+    overflow: hidden;
 }
 a, a:hover{
     text-decoration: none;
+    color: inherit;
 }
  
 button:focus {
     outline: 0px dotted;
     outline: 0px auto -webkit-focus-ring-color;
 }
-span.socials-text {
-    position: absolute;
-    right: 0px;
-    color: #fff;
-    padding: 2px 9px;
-    font-size: 22px;
-    cursor: pointer;
-    top: 10px;
-    border-radius: 66px;
-    /* height: 30px; */
-}
+
 i.fa.fa-share-alt-square {
     color: #fff!important;
-}
-ul.socialicons {
-    opacity: 0;
-    top: -1px;
-    position: relative;
-    transition: all ease 1s;
-    z-index: -1;
-    left: -7px;
-}
-ul.socialicons.main {
-    opacity: 1;
-    top: -1px;
-    left: -48px;
 }
 .pulse-button {
     position: relative;
@@ -49,10 +30,6 @@ ul.socialicons.main {
     color: white;
     font-size: 20px;
         
-}
-
-body {
-    background: url(../images/bg-body.jpg);
 }
  
 
@@ -569,7 +546,6 @@ button#green-color {
 .form-control-placeholder {
     position: absolute;
     top: 0;
-    padding: 7px 0 0 13px;
     transition: all 200ms;
     opacity: 0.5;
     font-size: 13px;
@@ -601,6 +577,7 @@ button#green-color {
 #portfolio-list {
 	width: 820px;
 	overflow: hidden;
+    margin-top: 20px;
 }
 
 #portfolio-list li {
@@ -674,9 +651,184 @@ button#green-color {
 
 /*-------------------------------------------------------*/
 
+.transition {
+	-webkit-transition: all .5s ease;
+	-moz-transition: all .5s ease;
+	-ms-transition: all .5s ease;
+	-o-transition: all .5s ease;
+	transition: all .5s ease;
+}
+
+.word-wrap {
+	word-wrap: break-word;
+	-ms-word-break: break-all;
+	word-break: break-all;
+	-webkit-hyphens: auto;
+	-moz-hyphens: auto;
+	hyphens: auto;
+}
+
+/*-------------------------------------------------------*/
+
 .extra-text{
+    font-size: 17px;
     font-family: 'Roboto Condensed', sans-serif;
     text-transform: uppercase;
-    margin-bottom: 20px;
     color: #333 !important;
+    padding-bottom: 20px;
+    font-weight: 400;
+	border-bottom: 1px solid #ededed;
+}
+
+/* Contact Section */
+
+/*-------------------------------------------------------*/
+#contact {
+	overflow: hidden;
+    font-family: 'Roboto Ceondensed', sans-serif;
+}
+
+.contact-info, .contact-form {
+	float: left;
+	padding: 0 20px;
+}
+
+.contact-info {
+	width: 250px;
+    font-family: 'Roboto Ceondensed', sans-serif;
+    margin-top: 150px;
+}
+
+.contact-form {
+	width: 500px;
+    margin-top: 150px;
+}
+
+/* Contact info */
+.contact-info ul {
+	float: left;
+	border-left: 1px solid #2ec1db;
+	padding-left: 18px;
+}
+
+.contact-info ul li {
+	font-size: 13px;
+	line-height: 20px;
+	color: #666;
+	overflow: hidden;
+    font-family: 'Roboto Ceondensed', sans-serif;
+}
+
+/* Google map */
+#map {
+	height: 300px;
+	margin-bottom: 25px;
+	width: 100%;
+	border-bottom: 1px solid #CCC;
+	border-top: 1px solid #CCC;
+}
+
+#map iframe{
+    width: 100%;
+}
+
+/*-------------------------------------------------------*/
+
+/* Forms */
+
+/*-------------------------------------------------------*/
+form .input, form textarea {
+	-moz-box-shadow: inset 0 5px 16px -13px #333;
+	-webkit-box-shadow: inset 0 5px 16px -13px #333;
+	box-shadow: inset 0 5px 16px -13px #333;
+	background-color: #FDFDFD;
+	border: 1px solid #d9d9d9;
+	-webkit-border-radius: 2px;
+	-moz-border-radius: 2px;
+	border-radius: 2px;
+	color: #666;
+	font-size: 12px;
+	height: 30px;
+	outline: none;
+	padding: 6px 10px;
+	resize: none;
+	width: 96%;
+}
+
+form textarea {
+	height: 112px;
+	line-height: 18px;
+	margin-bottom: 0px;
+	padding-top: 8px;
+}
+
+form {
+	margin-bottom: 15px;
+}
+
+form label {
+	display: block;
+	color: #999;
+	margin-bottom: 8px;
+	font-size: 13px;
+}
+
+.button {
+	color: #fff;
+	background-color: #666;
+	padding: 8px;
+	border: none;
+	border-radius: 3px;
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
+	cursor: pointer;
+	font-size: 13px;
+}
+
+.button:hover {
+	background-color:#cf455c;
+}
+
+/*-------------------------------------------------------*/
+
+@media (min-width: 992px) and (max-width: 1199px) {
+	
+}
+@media (min-width: 320px) and (max-width: 991px) {
+    .left-name h2 {
+        font-size: 54px;
+    }  
+    .left-name h2 span {
+        margin-top: -22px;
+    }
+    .left-address span {
+        width: 100%;
+    }
+    .sn {
+        font-size: 23px;
+        width: 58px;
+        height: 58px;
+        border: 3px dotted #2ec1db;
+        padding-top: 8px;
+    }
+    .right-skills:after, .right-skills:before {
+        content: none;
+    }
+    .top-skills {
+        max-width: 100%;
+    }
+    .right-skills {
+        border-left: 0px solid #2ec1db;
+        max-width: 100%;
+    }
+    .col-md-4.intetst-box {
+        width: 50%;
+    }
+    .address-right-box {
+        padding: 34px 0px 0px;
+    }
+    .right-skills {
+        width: auto;
+    }
+
 }
