--- a/css/style-main.css
+++ b/css/style-main.css
@@ -90,9 +90,11 @@ h6{font-family: 'Oswald', sans-serif!important;}
 }
 .left-name p {
     color: #383838;
-    font-weight: 400;
+    font-weight: 600;
     font-size: 14px;
     font-family: 'Roboto Condensed', sans-serif;
+    font-style: italic;
+    letter-spacing: 0.4px;
 }
 .left-address li {
     list-style: none;
@@ -600,6 +602,7 @@ button#green-color {
 	background-color: #FFF;
 	height: 120px;
 	width: fit-content;
+    max-width: 180px;
 }
 
 #portfolio-list li:hover .title {
